--- a/4_expense_tracker/package.json
+++ b/4_expense_tracker/package.json
@@ -3,23 +3,24 @@
   "version": "1.0.0",
   "main": "npx tsx index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
-    "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "express": "^4.21.1"
   },
   "devDependencies": {
-    "@types/express": "^4.0.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.7.7",
+    "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "zod": "^3.23.8"
   },
   "type": "module"
 }
