--- a/4_expense_tracker/.gitignore
+++ b/4_expense_tracker/.gitignore
@@ -1,3 +1,17 @@
+# npm
 node_modules
-# Keep environment variables out of version control
+package-lock.json
+npm-shrinkwrap.json
+*.log
+*.gz
 .env
+
+# Coveralls
+.nyc_output
+coverage
+
+# Benchmarking
+benchmarks/graphs
+
+# ignore additional files using core.excludesFile
+# https://git-scm.com/docs/gitignore
