--- a/4_expense_tracker/package.json
+++ b/4_expense_tracker/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.13",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2"
   },
