--- a/5_markdown_note_taking_app/package.json
+++ b/5_markdown_note_taking_app/package.json
@@ -15,6 +15,7 @@
     "@types/multer": "^1.4.12",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
     "tsconfig-paths": "^4.2.0"
   },
