--- a/5_markdown_note_taking_app/package.json
+++ b/5_markdown_note_taking_app/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.1",
     "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.70.2",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
