--- a/4_expense_tracker/package.json
+++ b/4_expense_tracker/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.7",
